--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "line-notify-nodejs": "^1.0.1",
     "node-cron": "^3.0.2"
   }
 }
